sin alert de newsletter

--- a/index.html
+++ b/index.html
@@ -413,13 +413,13 @@
       </footer>
     </div>
     <!--=================== Welcome Newsletter Dialog ===================-->
-    <div
+    <!-- <div
       class="modal fade welcome-newsletter-content"
       id="paira-welcome-newsletter"
       tabindex="-1"
       role="dialog"
       aria-hidden="true"
-    >
+    > -->
       <div class="modal-dialog modal-sm">
         <div class="modal-content text-center">
           <div class="modal-body">
