--- a/index.html
+++ b/index.html
@@ -303,7 +303,8 @@
                     </div>
                     <div class="col-md-4 col-xs-12 col-sm-4">
                         <div class="banner-small-back last">
-                            <img src="assets/images/family.jpg" alt="" class="img-responsive pull-left">
+                            <img src="assets/images/family.jpg" alt="" class="img-responsive pull-left"
+                            style="margin-bottom: 7%;">
                             <h4 class="margin-clear text-capitalize margin-bottom-5"><a href="#">Terapia en Familia</a></h4>
                             <p class="margin-bottom-0 margin-top-5">Verum tamen cum de rebus grand</p>
                         </div>
@@ -420,7 +421,7 @@
       role="dialog"
       aria-hidden="true"
     > -->
-      <div class="modal-dialog modal-sm">
+      <!-- <div class="modal-dialog modal-sm">
         <div class="modal-content text-center">
           <div class="modal-body">
             <div class="close-button">
@@ -489,7 +490,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--=================== Loading Image ===================-->
     <div class="paira-loading ajax-loading margin-clear text-center">
       <img
