--- a/index.html
+++ b/index.html
@@ -291,14 +291,16 @@
                         <div class="banner-small-back">
                             <img src="assets/images/individual.jpg" alt="" class="img-responsive pull-left"style="margin-bottom: 12%;">
                             <h4 class="margin-clear text-capitalize margin-bottom-5"><a href="#">Terapia Individual</a></h4>
-                            <p class="margin-bottom-0 margin-top-5">Verum tamen cum de rebus grand</p>
+                            <p class="margin-bottom-0 margin-top-5">La finalidad de la terapia individual es ayudarte a entender tu forma de comportarte, tus emociones y cómo tu forma de plantearte las cosas (algunas veces de forma no del todo consciente) te lleva a sentirte como te sientes y actuar como actúas. Esto te permite liberarte de las emociones negativas y te ayuda a mejorar tu capacidad para tomar decisiones. El resultado final, muchas veces, es que te sientes mejor contigo mismo.</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12 col-sm-4">
                         <div class="banner-small-back">
                             <img src="assets/images/couple.jpg" alt="" class="img-responsive pull-left" style="margin-bottom: 0%;">
                             <h4 class="margin-clear text-capitalize margin-bottom-5"><a href="#">Terapia en Pareja</a></h4>
-                            <p class="margin-bottom-0 margin-top-5">Verum tamen cum de rebus grand</p>
+                            <p class="margin-bottom-0 margin-top-5">La terapia de pareja ayuda a las parejas de todos los tipos a reconocer y resolver conflictos, y a mejorar sus relaciones. A través de esta terapia, puedes tomar decisiones meditadas sobre cómo reconstruir y fortalecer tu relación o tomar caminos separados.
+
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12 col-sm-4">
@@ -306,7 +308,7 @@
                             <img src="assets/images/family.jpg" alt="" class="img-responsive pull-left"
                             style="margin-bottom: 7%;">
                             <h4 class="margin-clear text-capitalize margin-bottom-5"><a href="#">Terapia en Familia</a></h4>
-                            <p class="margin-bottom-0 margin-top-5">Verum tamen cum de rebus grand</p>
+                            <p class="margin-bottom-0 margin-top-5">La terapia familiar tiene como objetivo restablecer el equilibrio de la familia cuando hay conflictos, tensiones o problemas de comunicación. También es útil cuando uno de sus miembros tiene problemas que afectan la convivencia en el hogar.</p>
                         </div>
                     </div>
                 </div>
@@ -326,9 +328,9 @@
                         </div>
                         <div class="col-md-3 col-xs-6 col-sm-6 margin-top-30">
                             <div class="instragram-desc text-left">
-                                <h4 class="margin-top-0 margin-bottom-10">ThemeTidy</h4>
-                                <a href="#" class="margin-bottom-10">@ forpreview</a>
-                                <p class="margin-bottom-15">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.</p>
+                                <h4 class="margin-top-0 margin-bottom-10">Mejor Arte</h4>
+                                <a href="#" class="margin-bottom-10">@ ConsultorioMejorArte</a>
+                                <p class="margin-bottom-15">Consultorio Psicologico especializado en Adultos, Adolescentes, Parejas</p>
                                 <button class="btn btn-primary btn-lg"><i class="fa fa-instagram margin-right-5"></i>Follow us</button>
                             </div>
                         </div>
@@ -337,7 +339,7 @@
                                 <div class="instragram-image position-r">
                                     <a href="#">
                                         <div class="background-overlay"></div>
-                                        <img src="assets/images/banner/banner-small-3.jpg" alt="" class="img-responsive">
+                                        <img src="assets/images/product/product-2.jpg" alt="" class="img-responsive">
                                     </a>
                                 </div>
                                 <div class="instragram-hover">
@@ -350,7 +352,7 @@
                                 <div class="instragram-image position-r">
                                     <a href="#">
                                         <div class="background-overlay"></div>
-                                        <img src="assets/images/banner/banner-small-2.jpg" alt="" class="img-responsive">
+                                        <img src="assets/images/product/product-5.jpg" alt="" class="img-responsive">
                                     </a>
                                 </div>
                                 <div class="instragram-hover">
@@ -363,7 +365,7 @@
                                 <div class="instragram-image position-r">
                                     <a href="#">
                                         <div class="background-overlay"></div>
-                                        <img src="assets/images/banner/banner-small-1.jpg" alt="" class="img-responsive">
+                                        <img src="assets/images/product/product-3.jpg" alt="" class="img-responsive">
                                     </a>
                                 </div>
                                 <div class="instragram-hover">
