website title update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       href="https://dolioreact.demothemesflat.com/manifest.json"
     />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <title>Dolio Web Template</title>
+    <title>Mejor Arte</title>
     <link href="index_files/main.6dea0f05.chunk.css" rel="stylesheet" />
   </head>
   <body cz-shortcut-listen="true">
@@ -170,7 +170,7 @@
                       </h1>
                       <p class="lt-sp03 mg-b60 text-white">
                         Enfocados para Adultos, Adolescentes, Parejas. <br>
-                        Somos especialistas en Tratamiento de Ansiedad, Tratamiento de Addicciones,<br>Conflictos de Pareja. 
+                        Somos especialistas en Tratamiento de Ansiedad, Tratamiento de Adicciones,<br>Conflictos de Pareja. 
                       </p>
                     </div>
                     <div
@@ -439,7 +439,7 @@
                           >
                             <h4 class="sub-title mg-b22">Acerca de mi</h4>
                             <h2 class="title-section mg-b26 color-d12">
-                              Psicologa<br>
+                              Psicóloga<br>
                               <span class="color-d4">Rebeca Araya.</span>
                             </h2>
                             <p>
