se quita el 1 que aparecia

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                           >Agendar Cita</a
                         >
                       </div>
-                    </div>1
+                    </div>
                   </div>
                 </div>
               </section>
