--- a/index.html
+++ b/index.html
@@ -1204,7 +1204,7 @@
         </div>
       </div>
     </div>
-    <a id="scroll-top" class=""></a>
+    <a id="scroll-top" class=""><i class="fas fa-arrow-up"></i></a>
     <script src="index_files/jquery.min.js.download"></script>
     <script src="index_files/plugins.js.download"></script>
     <script src="index_files/jquery-ui.js.download"></script>
