probando si el boton de agendar lo lleva a la seccion correcta

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 >
                   <a
                     class="btn-inner border-corner2 lt-sp08 text-white click-model"
-                    href="https://clinicapsicologicamejorarte.com/#terapias"
+                    href="https://clinicapsicologicamejorarte.com/#nuestras-terapias"
                     >Agendar Cita</a
                   >
                 </div>
@@ -185,7 +185,7 @@
                       <div class="fl-btn btn-general btn-hv-border">
                         <a
                           class="border-corner5 f-w500 lt-sp095 text-white"
-                          href="https://clinicapsicologicamejorarte.com/"
+                          href="https://clinicapsicologicamejorarte.com/#nuestras-terapias"
                           >Agendar Cita</a
                         >
                       </div>
@@ -459,7 +459,7 @@
                             <div class="fl-btn btn-general">
                               <a
                                 class="f-w500 color-1 lt-sp07"
-                                href="https://clinicapsicologicamejorarte.com/"
+                                href="https://clinicapsicologicamejorarte.com/#nuestras-terapias"
                                 >Agendar Cita</a
                               >
                             </div>
@@ -862,6 +862,7 @@
                       "
                     >
                       Nuestras Terapias
+                      id="nuestras-terapias"
                     </h2>
                   </div>
                   <div class="row position-relative z-index1">
