--- a/index.html
+++ b/index.html
@@ -862,9 +862,11 @@
                       "
                     >
                       Nuestras Terapias
-                      id="nuestras-terapias"
+                      
                     </h2>
+
                   </div>
+                  <section id="nuestras-terapias"> </section>
                   <div class="row position-relative z-index1">
                     <div
                       class=" animate-element wow delay5 fadeInUp"
