--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                       <li>
                         <a
                           class="active"
-                          href="https://clinicapsicologicamejorarte.com/"
+                          href="https://clinicapsicologicamejorarte.com/#home"
                           >Inicio</a
                         >
                         <ul class="sub-menu">
@@ -120,7 +120,7 @@
                 >
                   <a
                     class="btn-inner border-corner2 lt-sp08 text-white click-model"
-                    href="https://clinicapsicologicamejorarte.com/#nuestras-terapias"
+                    href="https://clinicapsicologicamejorarte.com/#terapias"
                     >Agendar Cita</a
                   >
                 </div>
@@ -185,7 +185,7 @@
                       <div class="fl-btn btn-general btn-hv-border">
                         <a
                           class="border-corner5 f-w500 lt-sp095 text-white"
-                          href="https://clinicapsicologicamejorarte.com/#nuestras-terapias"
+                          href="https://clinicapsicologicamejorarte.com/#terapias"
                           >Agendar Cita</a
                         >
                       </div>
@@ -459,9 +459,10 @@
                             <div class="fl-btn btn-general">
                               <a
                                 class="f-w500 color-1 lt-sp07"
-                                href="https://clinicapsicologicamejorarte.com/#nuestras-terapias"
+                                href="https://clinicapsicologicamejorarte.com/#terapias"
                                 >Agendar Cita</a
                               >
+
                             </div>
                           </div>
                         </div>
@@ -842,7 +843,6 @@
               </section>
             </div id="fin">
             <div class="section slide-personal-Intro-third slide-dark bg-white">
-              <section id="nuestras-terapias"> </section>
               <section class="specilizing-in s1" id="terapias" style="padding-top: 0;padding-bottom: 0;">
                 <div class="container">
                   <div class="flat-title">
