--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                       <li>
                         <a
                           class="click-model"
-                          href="https://clinicapsicologicamejorarte.com/#terapias"
+                          href="#terapias"
                           >Servicios de Terapias</a
                         >
                       </li>
@@ -120,7 +120,7 @@
                 >
                   <a
                     class="btn-inner border-corner2 lt-sp08 text-white click-model"
-                    href="https://clinicapsicologicamejorarte.com/#terapias"
+                    href="#terapias"
                     >Agendar Cita</a
                   >
                 </div>
@@ -185,7 +185,7 @@
                       <div class="fl-btn btn-general btn-hv-border">
                         <a
                           class="border-corner5 f-w500 lt-sp095 text-white"
-                          href="https://clinicapsicologicamejorarte.com/#terapias"
+                          href="#terapias"
                           >Agendar Cita</a
                         >
                       </div>
@@ -459,7 +459,7 @@
                             <div class="fl-btn btn-general">
                               <a
                                 class="f-w500 color-1 lt-sp07"
-                                href="https://clinicapsicologicamejorarte.com/#terapias"
+                                href="#terapias"
                                 >Agendar Cita</a
                               >
 
