prueba de landing
se ajusta el padding para que se vea bien en otras resoluciones

--- a/index.html
+++ b/index.html
@@ -891,6 +891,24 @@
                           <p class="lt-sp01" style="margin-left:5%;margin-right: 5%;">
                             La finalidad de la terapia individual es ayudarte a entender tu forma de comportarte, tus emociones y cómo tu forma de plantearte las cosas (algunas veces de forma no del todo consciente) te lleva a sentirte como te sientes y actuar como actúas. Esto te permite liberarte de las emociones negativas y te ayuda a mejorar tu capacidad para tomar decisiones. El resultado final, muchas veces, es que te sientes mejor contigo mismo.
                           </p>
+                          <div
+                            class="animate-element wow delay5 fadeInUp"
+                            data-wow-delay="0.5s"
+                            style="
+                              visibility: visible;
+                              animation-delay: 0.5s;
+                              animation-name: fadeInUp;
+                            "
+                          >
+                            <div class="fl-btn btn-general" style="padding-top:3%">
+                              <a
+                                class="f-w500 color-1 lt-sp07"
+                                href="#terapias"
+                                >Agendar Cita</a
+                              >
+
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -915,7 +933,7 @@
                         
                           <span class="icon"><img src="./images/couple.jpg"</span>
                         
-                        <div class="ct-is" style="text-align:center">
+                        <div class="ct-is" style="text-align:center" >
                           <h3 class="title mg-b21">
                             <a href="https://clinicapsicologicamejorarte.com/"
                               >Terapia en Pareja</a
@@ -924,6 +942,24 @@
                           <p class="lt-sp01" style="margin-left:5%;margin-right: 5%;">
                             La terapia de pareja ayuda a las parejas de todos los tipos a reconocer y resolver conflictos, y a mejorar sus relaciones. A través de esta terapia, puedes tomar decisiones meditadas sobre cómo reconstruir y fortalecer tu relación o tomar caminos separados.
                           </p>
+                          <div
+                            class="animate-element wow delay5 fadeInUp"
+                            data-wow-delay="0.5s"
+                            style="
+                              visibility: visible;
+                              animation-delay: 0.5s;
+                              animation-name: fadeInUp;
+                            "
+                          >
+                            <div class="fl-btn btn-general" style="padding-top:3%">
+                              <a
+                                class="f-w500 color-1 lt-sp07"
+                                href="#terapias"
+                                >Agendar Cita</a
+                              >
+
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -958,6 +994,24 @@
                           <p class="lt-sp01" style="margin-left:5%;margin-right: 5%;">
                             La terapia familiar tiene como objetivo restablecer el equilibrio de la familia cuando hay conflictos, tensiones o problemas de comunicación. También es útil cuando uno de sus miembros tiene problemas que afectan la convivencia en el hogar.
                           </p>
+                          <div
+                            class="animate-element wow delay5 fadeInUp"
+                            data-wow-delay="0.5s"
+                            style="
+                              visibility: visible;
+                              animation-delay: 0.5s;
+                              animation-name: fadeInUp;
+                            "
+                          >
+                            <div class="fl-btn btn-general" style="padding-top:3%">
+                              <a
+                                class="f-w500 color-1 lt-sp07"
+                                href="#terapias"
+                                >Agendar Cita</a
+                              >
+
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
