se agrega el curriculumn y las nuevas imagenes personales en iconos

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                             animation-name: fadeInUp;
                           "
                         >
-                          <img src="index_files/03(1).png" alt="images" />
+                        <img src="/images/icon2.png" alt="images" / style="margin-top:20%">
                         </div>
                       </div>
                       <div class="col-right">
@@ -449,7 +449,7 @@
                               <span class="color-d4">Rebeca Araya.</span>
                             </h2>
                             <p>
-                              Yo soy la psicóloga Rebecca Araya y desde mis 15 años tuve mi acercamiento a la psicología, al buscar ayuda descubrí qué me apasionaba el estudio del comportamiento humano y decidí estudiar la carrera, al volverse mi pasión quise especializarme en enfoques científicos como la TREC y la Terapia en conductas adictivas desde la visión desideologizante de Reducción de Daños, basada en Derechos Humanos. Teniendo la oportunidad de ayudar a muchas personas que sufren a recuperar el control de su vida. Tengo el conocimiento teórico, la práctica y la pasión para darles una terapia de calidad y con efectos positivos desde la primera sesión.
+                              Hola! Yo soy la psicóloga Rebecca Araya y desde mis 15 años tuve mi acercamiento a la psicología, al buscar ayuda descubrí qué me apasionaba el estudio del comportamiento humano y decidí estudiar la carrera, al volverse mi pasión quise especializarme en enfoques científicos como la TREC y la Terapia en conductas adictivas desde la visión desideologizante de Reducción de Daños, basada en Derechos Humanos. Teniendo la oportunidad de ayudar a muchas personas que sufren a recuperar el control de su vida. Tengo el conocimiento teórico, la práctica y la pasión para darles una terapia de calidad y con efectos positivos desde la primera sesión.
                               
                             </p>
                           </div>
@@ -462,7 +462,7 @@
                               animation-name: fadeInUp;
                             "
                           >
-                            <div class="fl-btn btn-general">
+                            <div class="fl-btn btn-general" style="margin-bottom: 10%;">
                               <a
                                 class="f-w500 color-1 lt-sp07"
                                 href="#terapias"
@@ -764,12 +764,12 @@
                                 <span
                                   class="numb-count"
                                   data-from="0"
-                                  data-to="284"
+                                  data-to="300"
                                   data-speed="2000"
                                   data-inviewport="yes"
-                                  >284</span
+                                  >300</span
                                 >
-                                <p>Hapy Client</p>
+                                <p>Pacientes</p>
                               </div>
                             </div>
                           </div>
@@ -787,12 +787,12 @@
                                 <span
                                   class="numb-count"
                                   data-from="0"
-                                  data-to="165"
+                                  data-to="7000"
                                   data-speed="2000"
                                   data-inviewport="yes"
                                   >165</span
                                 >
-                                <p>Review</p>
+                                <p>Terapias</p>
                               </div>
                             </div>
                           </div>
@@ -812,12 +812,12 @@
                                 <span
                                   class="numb-count"
                                   data-from="0"
-                                  data-to="379"
+                                  data-to="8"
                                   data-speed="2000"
                                   data-inviewport="yes"
                                   >379</span
                                 >
-                                <p>Project Complate</p>
+                                <p>Años de experiencia</p>
                               </div>
                             </div>
                           </div>
@@ -1076,9 +1076,7 @@
                       </h2>
                       <div class="description">
                         <p class="lt-sp01">
-                          Lorem ipsum, or lipsum as it is sometimes known, is
-                          dummy text used in laying out print, graphic or web
-                          designs.
+                          San Jose, Costa Rica
                         </p>
                         <p class="lt-sp01">
                           The passage is attributed to an unknown typesetter in
@@ -1237,7 +1235,8 @@
                           animation-name: fadeInUp;
                         "
                       >
-                        <img src="index_files/11.png" alt="images" />
+                        <img src="/images/personal.png" alt="images" / id="personal">
+                        <img src="/images/center.png" alt="images" / id="center">
                         <div
                           class="flat-spacer"
                           data-desktop="0"
@@ -1288,6 +1287,7 @@
                           Experiencia y educacion
                         </h4>
                         <h2 class="title-section color-d12">Mi Curriculum</h2>
+                        <p>Ver Curriculum Completo</p>
                       </div>
                       <div
                         class="
@@ -1306,44 +1306,48 @@
                         "
                       >
                         <ul class="timeline">
+                          <li class="timeline-inverted color3">
+                            <div class="timeline-badge"></div>
+                            <div class="timeline-panel">
+                              <h3 class="f-info">Clinica Psicológica Mejor Arte</h3>
+                              <div class="s-info">2015 - Presente</div>
+                              <p>
+                                Psicología Clínica en terapia individual, de pareja y familia.
+                              </p>
+                            </div>
+                          </li>
                           <li class="timeline-inverted color1">
                             <div class="timeline-badge"></div>
                             <div class="timeline-panel">
-                              <h3 class="f-info">University Of Costa Rica</h3>
-                              <div class="s-info">lorem</div>
-                              <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, iste.
+                              <h3 class="f-info">Universidad Latina de Costa Rica.</h3>
+                              <div class="s-info">2018</div>
+                              <p style="max-width:100%;">
+                                Técnico Ciencias de la Salud con Énfasis en Manejo de Conductas Adictivas.
                               </p>
                             </div>
                           </li>
                           <li class="timeline-inverted color2">
                             <div class="timeline-badge"></div>
                             <div class="timeline-panel">
-                              <h3 class="f-info">lorem</h3>
-                              <div class="s-info">lorem</div>
+                              <h3 class="f-info">Instituto Albert Ellis, Nueva York, Estados Unidos.</h3>
+                              <div class="s-info">2016</div>
                               <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, inventore?
+                                Conductual TREC y Terapia Cognitiva TCC, Nivel Advance.
                               </p>
                             </div>
                           </li>
                           <li class="timeline-inverted color3">
                             <div class="timeline-badge"></div>
                             <div class="timeline-panel">
-                              <h3 class="f-info">Lorem, ipsum.</h3>
-                              <div class="s-info">Lorem, ipsum.</div>
+                              <h3 class="f-info">Universidad Católica de Costa Rica.</h3>
+                              <div class="s-info">2014</div>
                               <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, ad.
+                                Licenciatura en Psicología.
                               </p>
                             </div>
                           </li>
                         </ul>
-                        <div class="fl-btn btn-general btn-hv-border">
-                          <a
-                            class="f-w500 lt-sp1 border-corner2 text-one"
-                            href="https://clinicapsicologicamejorarte.com/"
-                            >Curriculum</a
-                          >
-                        </div>
+                       
                       </div>
                     </div>
                   </div>
