se agrega el texto de especializacion

--- a/index.html
+++ b/index.html
@@ -664,11 +664,11 @@
                         <div class="ct-is">
                           <h3 class="title mg-b21">
                             <a href="https://clinicapsicologicamejorarte.com/"
-                              >Tratamiento de Ansiedad</a
+                              >Terapias Modernas</a
                             >
                           </h3>
                           <p class="lt-sp01">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos eveniet doloremque tempore error consequatur? Dolor sapiente nobis neque vero aperiam, quis quisquam deserunt perspiciatis blanditiis velit quidem ex beatae? Expedita!
+                            Muy efectivas para el tratamiento de las adicciones, ansiedad, ataques de pánico,<br> conductas compulsivas, obsesiones, depresión y básicamente para cualquier<br> problema emocional. Esta terapia es corta y efectiva se necesita el trabajo<br> en conjunto para poder entrenar al cerebro a pensar de manera más saludable.
                           </p>
                         </div>
                       </div>
@@ -697,12 +697,14 @@
                         <div class="ct-is">
                           <h3 class="title mg-b21">
                             <a href="https://clinicapsicologicamejorarte.com/"
-                              >Tratamiento de Adicciones</a
+                              >Terapia Racional Emotivo Conductual <br> Terapia Cognitivo Conductual</a
                             >
+                            <br>
+                            <a>TREC & TCC
+</a>
                           </h3>
                           <p class="lt-sp01">
-                            lorem lorem lorem <br />experience.
-                            lorem lorem lorem 
+                            La Terapia con enfoque TREC & TCC se trabaja desde los<br> pensamientos qué son los que generan las emociones y por ende<br> nos llevan a una conducta. 
                           </p>
                         </div>
                       </div>
@@ -731,11 +733,14 @@
                         <div class="ct-is">
                           <h3 class="title mg-b21">
                             <a href="https://clinicapsicologicamejorarte.com/"
-                              >Problemas de pareja </a
+                              >Terapia Enfocada para Parejas</a
                             >
+                            <br>
+                            <a>TFE</a>
                           </h3>
                           <p class="lt-sp01">
-                            Lorem ipsum dolor sit amet. <br />Lorem ipsum dolor sit amet.
+                            
+La Terapia de Pareja se aborda desde el enfoque de la<br> Terapia Focalizada en Emociones (TFE) en dónde se enfoca<br> no en los problemas sino en los anhelos no satisfechos<br> de la pareja y en re establecer la conexión emocional.
                           </p>
                         </div>
                       </div>
